# paper_insight

./: .env.example  .gitignore  README.md  start.sh
backend/: pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: config.py  delivery.py  papers.py  reports.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/jobs/: generate_report.py
backend/app/services/: artifact_store.py  dedup.py  feishu.py  matching.py  paper_repository.py  report_builder.py  summarizer.py
backend/app/services/paper_sources/: arxiv.py  base.py  semantic_scholar.py
backend/paper_insight_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_config_api.py  test_data_dir_config.py  test_dedup.py  test_dependencies.py  test_feishu.py  test_matching.py  test_paper_sources.py  test_papers_api.py  test_report_builder.py  test_reports_api.py  test_start_script.py  test_summarizer.py
docs/superpowers/plans/: 2026-06-06-paper-insight-v1.md
docs/superpowers/specs/: 2026-06-06-paper-insight-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  i18n.ts  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/pages/: ConfigPage.test.tsx  ConfigPage.tsx  DashboardPage.tsx  DeliveryPage.tsx  PapersPage.test.tsx  PapersPage.tsx  ReportsPage.tsx
